--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 				<button value="9">9</button>
 				<button value="/">&divide;</button>
 
-				<button value="7">4</button>
-				<button value="8">5</button>
-				<button value="9">6</button>
+				<button value="4">4</button>
+				<button value="5">5</button>
+				<button value="6">6</button>
 				<button value="*">&times;</button>
 
-				<button value="7">1</button>
-				<button value="8">2</button>
-				<button value="9">3</button>
+				<button value="1">1</button>
+				<button value="2">2</button>
+				<button value="3">3</button>
 				<button value="+">&plus;</button>
 
-				<button value="7">0</button>
-				<button value="8">.</button>
-				<button value="9">-</button>
-				<button value="AC">AC</button>
+				<button value="0">0</button>
+				<button value=".">.</button>
+				<button value="-">-</button>
+				<button class="all-clear" value="AC">AC</button>
 
 				<button value="=">&equals;</button>
 
